# FatherTime

./: .gitignore  =5.0.0  Makefile  README.md  build-simple.py  build.bat  build.py  config.json  config.py  config_manager.py  daily_timer_states.json  daily_timers.json  database.py  logger.py  main.py  requirements.txt  run  run.bat  timer_manager.py  timer_order.json  timers.json
data/: daily_timer_states.json  daily_timers.json  sessions.json  timers.json
docs/: CLEANUP_REPORT.md
src/config/: config (Robert DeGeorge's conflicted copy 2025-08-13 1).json  config (Robert DeGeorge's conflicted copy 2025-08-13).json  config.json  pyproject.toml  setup.cfg
src/fathertime/: config.py  config_manager.py  database.py  exceptions.py  theme_manager.py  timer_manager.py
tests/: __init__.py  test_config_manager.py  test_database.py  test_performance.py  test_security_validation.py
ui/: AddCountdownDialog.qml  AddCountdownDialogResponsive.qml  AddTimerDialog.qml  AddTimerDialogResponsive.qml  RenameTimerDialog.qml  RenameTimerDialogResponsive.qml  ResetDataDialog.qml  ResetDataDialogResponsive.qml  SettingsDialog.qml  SettingsDialogResponsive.qml  TimerCard.qml  main.qml  main.qml.backup  main_original.qml
ui/components/: INTEGRATION_GUIDE.md  MainAppMenuExample.qml  PopupMenuDemo.qml  README_PopupMenuSystem.md  ResponsiveMenuExample.qml  ResponsivePopupMenu.qml  SimpleDemo.qml  SimplePopupMenu.qml  TimerCardWithMenu.qml  USAGE_GUIDE.md  WORKING_INTEGRATION.md  WorkingTimerCard.qml  run_demo.py  run_simple_demo.py
