[metadata]
name = father-time
version = 1.0.0
description = A timer application built with PySide6
author = Father Time Team
author_email = team@fathertime.app

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PySide6>=6.5.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-qt>=4.0.0
    mypy>=1.0.0
    black>=22.0.0
    flake8>=4.0.0
    isort>=5.0.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[isort]
profile = black
multi_line_output = 3
line_length = 88